# whatsapp-bot

./: README.md  agent_loop.py  agente_whatsapp.ipynb  faq_agente.py  fluxo_perguntas.txt  main.py  pyproject.toml  whatsapp_composer.py  whatsapp_session.py  whatsapp_sidebar.py
whatsapp_bot/: __init__.py  cli.py  composer.py  config.py  loop.py  messages.py  session.py  sidebar.py
