[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "whatsapp-bot"
version = "0.1.0"
description = "Bot FAQ no WhatsApp Web (Selenium) para chats configurados"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "selenium>=4.41.0",
    "webdriver-manager>=4.0.2",
]

[project.scripts]
whatsapp-bot = "whatsapp_bot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["whatsapp_bot"]
